--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 node_modules/
+/.next/
+out/
+.turbo/
+.vercel/
+
+# environment
+.env*
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS / editor
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
